compiler/testData/diagnostics/tests/classObjects/multipleDissallowedDefaultObjects.fir.kt
class A {
    inner class I {
        companion object A

        companion <!MANY_COMPANION_OBJECTS!>object B<!>

        companion <!MANY_COMPANION_OBJECTS!>object C<!>
    }
}

object O {
    companion object A

    companion <!MANY_COMPANION_OBJECTS!>object B<!>

    companion <!MANY_COMPANION_OBJECTS!>object C<!>
}
